--- a/Demo_Employee/Demo_Employee/Demo_CRUD.csproj
+++ b/Demo_Employee/Demo_Employee/Demo_CRUD.csproj
@@ -161,7 +161,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\dbcs.cs" />
+    <Compile Include="Models\db.cs" />
     <Compile Include="Models\Employee.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
